src/main/webapp/css/esup-stock.css
/**
 * Copyright (C) 2011 Esup Portail http://www.esup-portail.org
 * Copyright (C) 2011 UNR RUNN http://www.unr-runn.fr
 * @Author (C) 2011 Vincent Bonamy <Vincent.Bonamy@univ-rouen.fr>
 * @Contributor (C) 2011 Jean-Pierre Tran <Jean-Pierre.Tran@univ-rouen.fr>
 * @Contributor (C) 2011 Julien Marchal <Julien.Marchal@univ-nancy2.fr>
 * @Contributor (C) 2011 Julien Gribonvald <Julien.Gribonvald@recia.fr>
 * @Contributor (C) 2011 David Clarke <david.clarke@anu.edu.au>
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.esupstock table {
margin-bottom: 1.4em;
width: 100%;
}
.esupstock  thead th {
background: #c3d9ff;
text-align: left;
}
.esupstock td, 
.esupstock th {
border: 0;
margin: 0;
padding: 0.2em;
}

#accessible-version {
text-align: right;
}

.esupstock .browserlist { 
list-style: none; 
}


.esupstock #bigdirectory {
text-decoration: underline;
font-weight: bold;
}

.esupstock .breadcrumbs {
background: #f3f3f3;
padding: 5px;
border-bottom: 1px solid #bbb;
}

.esupstock #toolbar {
background: #f3f3f3;
padding: 20px 0px 5px 0px;
border: 1px solid #bbb;
}

.esupstock .toolbar-item {  
display: block;
float: left;
padding: 20px 0px 0px 0px;
}

.esupstock .toolbar-item a { 
padding: 24px 5px 0px 10px;
margin: 0px 10px; 
}

.esupstock #toolbar-create {  
background: url(/esup-portlet-stockage/img/new_folder_24px.gif) no-repeat center top; 
}

.esupstock #toolbar-refresh {  
background: url(/esup-portlet-stockage/img/refresh_24px.gif) no-repeat center top; 
}

.esupstock #toolbar-copy {  
background: url(/esup-portlet-stockage/img/copy_24px.gif) no-repeat center top; 
}

.esupstock #toolbar-cut {  
background: url(/esup-portlet-stockage/img/cut_24px.gif) no-repeat center top; 
}

.esupstock #toolbar-past {  
background: url(/esup-portlet-stockage/img/paste_24px.gif) no-repeat center top; 
}

.esupstock #toolbar-rename {  
background: url(/esup-portlet-stockage/img/rename_24px.gif) no-repeat center top; 
}

.esupstock #toolbar-delete {  
background: url(/esup-portlet-stockage/img/delete_24px.gif) no-repeat center top; 
}

.esupstock #toolbar-zip {  
padding-top: 30px;
background: url(/esup-portlet-stockage/img/package-x-generic.png) no-repeat center top; 
}

.esupstock #info-toolbar span {
display: block;
text-align: center;
}

.esupstock #info-toolbar .info {
background: #aaff44;
}

.esupstock #info-toolbar .warn {
background: #ffaa44;
}

.esupstock .esupHide {
display: none;	
}

.esupstock .qq-upload-button {
display: block;
padding: 24px 5px 0px 10px;
margin-top: -23px;
background: url(/esup-portlet-stockage/img/upload_24px.gif) no-repeat top; 
color: #5a95cf!important;
text-decoration: none;
width: 60px;
font-weight:bold;
}


.esupstock .qq-upload-list {
 display:none;
 background: #f3f3f3;
 border:1px dotted #bbb;
 position: absolute;
 margin:0;
 top:40%;
 left:30%;
 list-style: none;
 padding:25px;
 z-index:2000; 
}

.esupstock .qq-upload-list li {
list-style: none;
}

.esupstock .qq-upload-drop-area {
height: 25px;
background: #f3f3f3;
border: 1px dotted #bbb;
position: absolute;
float: right;
margin: 0;
top:30%;
left:20%;
padding:150px;
z-index:2000;
display: block;
}

.esupstock .qq-upload-list span {
margin: 2px;
}

.esupstock .qq-upload-failed-text {
display: none;
}

.esupstock .qq-upload-fail .qq-upload-failed-text {
display: inline;
}

.esupstock .qq-upload-button input {
height: 60px;
width: 60px;
margin: 0px;
padding: 0px;
}

.esupstock #authenticationForm {
border: #ddd 1px solid;
margin: 10px;
padding: 10px;
}

.esupstock #authenticationForm label,
.esupstock #authenticationForm input {
display: block;
}

/* Hack for uPortal 2.x */
#portal-page-body .esupstock .container #fileTree ul, li {
margin: 0px 5px 0px 0px;
padding: 0px 0px 0px 15px;
}

